# model_practice

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: .dockerignore  Dockerfile
frontend/src/: App.css  App.jsx  index.css
